test/Fail/Issue6654c.err
Issue6654c.agda:1,1-67: error: [OptionError]
Option --safe cannot be combined with option combination
--large-indices and --forced-argument-recursion
